--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,27 @@
         "drupal/core-recommended": "^10",
         "pantheon-systems/drupal-integrations": "^10",
         "cweagans/composer-patches": "^1.7",
-        "drush/drush": "^11 || ^12"
+        "drush/drush": "^12.1",
+        "drupal/block_content_permissions": "^1.11",
+        "drupal/paragraphs": "^1.15",
+        "drupal/paragraphs_grid": "^1.5",
+        "drupal/paragraphs_type_permissions": "^1.15",
+        "drupal/quick_node_clone": "^1.16",
+        "drupal/redirect": "^1.8",
+        "drupal/redirect_404": "^1.8",
+        "drupal/token": "^1.12",
+        "drupal/upgrade_status": "^4.0",
+        "drupal/tac_lite": "^1.0@dev",
+        "drupal/views_data_export": "^1.3",
+        "levmyshkin/flexslider": "^2.7",
+        "drupal/verf": "^2.0",
+        "drupal/scheduler": "^2.0",
+        "drupal/scheduler_rules_integration": "^2.0",
+        "drupal/pathauto": "^1.11",
+        "drupal/masquerade": "^2.0@RC",
+        "drupal/menu_block": "^1.10",
+        "drupal/login_destination": "^2.0@beta",
+        "drupal/libraries": "^4.0"
     },
     "require-dev": {
         "drupal/core-dev": "^10"
@@ -28,7 +48,7 @@
     "conflict": {
         "drupal/drupal": "*"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "drupal-scaffold": {
