--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,9 @@
         "drupal/devel": "^5.1",
         "drupal/devel_kint_extras": "^1.1",
         "drupal/field_group": "^3.4",
-        "drupal/admin_toolbar": "^3.4"
+        "drupal/admin_toolbar": "^3.4",
+        "drupal/views_url_path_arguments": "^1.2",
+        "drupal/fieldblock": "^2.2"
     },
     "require-dev": {
         "drupal/core-dev": "^10"
