--- a/web/themes/custom/scaled/scaled.info.yml
+++ b/web/themes/custom/scaled/scaled.info.yml
@@ -21,3 +21,19 @@ libraries-extend:
 core_version_requirement: ^10
 generator: 'starterkit_theme:10.1.1'
 description: 'A theme generated from starter kit, test change'
+regions:
+  header: Header
+  primary_menu: Primary menu
+  secondary_menu: Secondary menu
+  hero: Hero (full width)
+  highlighted: Highlighted
+  breadcrumb: Breadcrumb
+  social: Social Bar
+  page_title: Page title
+  content_above: Content Above
+  content: Content
+  sidebar: Sidebar
+  paragraphs: Paragraph components
+  content_below: Content Below
+  footer_top: Footer Top
+  footer_bottom: Footer Bottom
